# gnulinux-sdatabase

./: ChangeLog  Makefile  README  README.md  TODO  archive.sh  sdatabase.dox
csv/: Films.csv  FilmsLight.csv  file2.csv
debian/: README.Debian  changelog  control  copyright  docs  rules
src/: CMakeLists.txt  config.h.cmake  cscope.sh  def.h  homepage.h  lines_count.sh  sdatabase.cpp  sdatabase.h
src/bitmaps/: dvd.xpm  found.xpm  sortdown.xpm  sortup.xpm
src/engine/: CMakeLists.txt  manager.cpp  manager.h  settings_manager.cpp  settings_manager.h  tools.cpp  tools.h
src/files/: CMakeLists.txt  csvfile.cpp  csvfile.h  ifile.cpp  ifile.h  xmlfile.cpp  xmlfile.h
src/injection/: bob.cpp  bob.h  bob.s  bob_patched.s  code_injecter.cpp  code_injecter.h  dummy.cpp  dummy.h  inject  inject.cpp  main  main.cpp
src/interface/: CMakeLists.txt  edit_dialog.cpp  edit_dialog.h  file_explorer.cpp  file_explorer.h  find_dialog.cpp  find_dialog.h  interface.cpp  interface.h  new_table_dialog.cpp  new_table_dialog.h  sdatabase.cpp  sdatabase.h  tableview.cpp  tableview.h
src/leak/: CMakeLists.txt  leak_detector.h  memory_manager.cpp  memory_manager.h
src/log/: CMakeLists.txt  filelog.cpp  filelog.h  ilog.cpp  ilog.h
src/performance/: CMakeLists.txt  dummy.cpp  dummy.h  performance_analysis.cpp  performance_analysis.h  test_perf.cpp
src/plugins/: CMakeLists.txt  add.c  iplugin.h  mul.c  plugin_factory.h  plugin_factory_initializer.h  plugin_factory_manager.cpp  plugin_factory_manager.h  plugin_initializer.h  plugin_interface.h  plugin_manager.cpp  plugin_manager.h
src/plugins/csv/: CMakeLists.txt  csv.cpp  csv.h
src/plugins/xml/: CMakeLists.txt  xml.cpp  xml.h
src/tools/: CMakeLists.txt  name.cpp  name.h
xml/: file1.xml_orig
